# Symphony

./: INTENT.md  README.md  go.work
knowledge/: INTENT.md  MANIFEST.md  SKILL.md  (+1 more)
libraries/knowledge-vector-engine-cpp/: CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
libraries/knowledge-vector-engine-cpp/cmake/: SymphonyKnowledgeVectorEngineConfig.cmake.in  install-receipt.json.in  uninstall.cmake.in
libraries/knowledge-vector-engine-cpp/include/symphony/knowledge/engine/: digest.hpp  error.hpp  json.hpp  limits.hpp  path.hpp  protocol.hpp
libraries/knowledge-vector-engine-cpp/src/: digest.cpp  error.cpp  path.cpp  protocol.cpp
libraries/knowledge-vector-engine-cpp/tests/: foundation_test.cpp
modules/knowledge-session-coordinator/: CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
modules/knowledge-session-coordinator/cmake/: install-receipt.json.in  uninstall.cmake.in
modules/knowledge-session-coordinator/src/: coordinator.cpp  coordinator.hpp  main.cpp
modules/knowledge-session-coordinator/tests/: coordinator_test.cpp  process_smoke.sh
modules/sacv-engine/: CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
modules/sacv-engine/cmake/: install-receipt.json.in  uninstall.cmake.in
modules/sacv-engine/src/: main.cpp  sacv.cpp  sacv.hpp
modules/sacv-engine/tests/: process_smoke.sh  sacv_test.cpp
modules/sclv-engine/: CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
modules/sclv-engine/cmake/: install-receipt.json.in  uninstall.cmake.in
modules/sclv-engine/src/: airgap_main.cpp  local_git.cpp  local_git.hpp  local_git_main.cpp  main.cpp  provider.cpp  provider.hpp  sclv.cpp  sclv.hpp
modules/sclv-engine/tests/: process_smoke.sh  sclv_test.cpp
modules/skvi-engine/: CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
modules/skvi-engine/cmake/: install-receipt.json.in  uninstall.cmake.in
modules/skvi-engine/src/: main.cpp  skvi.cpp  skvi.hpp
modules/skvi-engine/tests/: process_smoke.sh  skvi_test.cpp
modules/sodv-engine/: CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
modules/sodv-engine/cmake/: install-receipt.json.in  uninstall.cmake.in
modules/sodv-engine/src/: main.cpp  sodv.cpp  sodv.hpp
modules/sodv-engine/tests/: process_smoke.sh  sodv_test.cpp
tools/symphony-validator/: .gitignore  CMakeLists.txt  INSTALL.md  INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
tools/symphony-validator/src/: artifacts.cpp  artifacts.hpp  caller_authority.cpp  caller_authority.hpp  canonical_surfaces.cpp  canonical_surfaces.hpp  cli.cpp  cli.hpp  cross_reference.cpp  cross_reference.hpp  doctrine_vocab.cpp  doctrine_vocab.hpp  evidence.cpp  evidence.hpp  knowledge_contracts.cpp  knowledge_contracts.hpp  main.cpp  paths.cpp  paths.hpp  root_contracts.cpp  root_contracts.hpp  runtime_contracts.cpp  runtime_contracts.hpp  sacv_registry.cpp  sacv_registry.hpp  sclv_changelog.cpp  sclv_changelog.hpp  sclv_ledger.cpp  sclv_ledger.hpp  sclv_references.cpp  sclv_references.hpp  sclv_shape.cpp  sclv_shape.hpp  sclv_skvi_references.cpp  sclv_skvi_references.hpp  skvi_coverage.cpp  skvi_coverage.hpp  skvi_index.cpp  skvi_index.hpp  skvi_paths.cpp  (+9 more)
tools/symphony-validator/tests/: caller_authority_test.cpp  fix_010.py  fix_all.py  fix_fixtures.py  sclv_temporal_test.cpp  smoke.sh  sodv_release_test.cpp
tools/symphony-validator/tests/fixtures/knowledge/skvi/: INDEX.md
tools/symphony-validator/tests/fixtures_affected_surface_absent/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_affected_surface_unindexed/: existing_unindexed.md
tools/symphony-validator/tests/fixtures_affected_surface_unindexed/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_invalid_sclv_change_type/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_invalid_sclv_merge_commit/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_invalid_sclv_related_pr/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_invalid_sclv_status/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_invalid_skvi_status/knowledge/sclv/: CHANGELOG.md
tools/symphony-validator/tests/fixtures_invalid_skvi_status/knowledge/skvi/: INDEX.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/: INTENT.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/fixtures_valid/knowledge/: INTENT.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/knowledge/: INTENT.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/knowledge/sclv/: CHANGELOG.md  MANIFEST.md  SKILL.md  SPEC.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/knowledge/sodv/: INTENT.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/modules/bus-troll/: SKILL.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/modules/hotpath-runtime/: INTENT.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/modules/node-troll/: MANIFEST.md
tools/symphony-validator/tests/fixtures_missing_knowledge_anchor/tools/symphony-validator/: INTENT.md  MANIFEST.md  SKILL.md  SPEC.md
tools/symphony-validator/tests/fixtures_missing_root_anchor/: README.md
tools/symphony-validator/tests/fixtures_unauthorized_docs/: README.md
tools/symphony-validator/tests/fixtures_vocab_bus_agent/: README.md
tools/symphony-validator/tests/fixtures_vocab_c_o_r_e/: README.md
tools/symphony-validator/tests/fixtures_vocab_core/: README.md
tools/symphony-validator/tests/fixtures_vocab_execution_node/: README.md
tools/symphony-validator/tests/fixtures_vocab_markdown_wins/: README.md
tools/symphony-validator/tests/fixtures_vocab_native_execution/: README.md
tools/symphony-validator/tests/fixtures_vocab_score/: README.md
tools/symphony-validator/tests/fixtures_vocab_seeds_1/: README.md
tools/symphony-validator/tests/fixtures_vocab_seeds_2/: README.md
tools/symphony-validator/tests/fixtures_vocab_seeds_3/: README.md
(+329 files in other folders)
